--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/dark-theme": "^0.2.2",
     "antd": "^3.19.5",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.12.0",
