--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
+    "react-native-linear-gradient": "^2.5.4",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8"
   },
