--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 PORT=3001
 ENV=development
 
-
+MJ_APIKEY_PUBLIC=dbd8d1da3c38667e08b7377f2ed7b7b3
+MJ_APIKEY_PRIVATE=cfcf0f4bba21404a174ef38f746b3d0a
 MONGODB_URI = mongodb://localhost/REACTtimesheets
 SESSION_SECRET = 'super secret blah'
