--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ant-design/dark-theme": "^0.2.2",
     "antd": "^3.19.5",
+    "apexcharts": "^3.8.2",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.12.0",
     "customize-cra": "^0.2.13",
@@ -12,6 +13,7 @@
     "less-loader": "^5.0.0",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.3",
+    "react-csv": "^1.1.1",
     "react-dom": "^16.8.6",
     "react-native-linear-gradient": "^2.5.4",
     "react-router-dom": "^5.0.0",
